# flet-router

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
examples/: example_app.py  example_app_class_middleware.py
src/flet_router/builtin/: __init__.py
src/flet_router/builtin/views/: not_auth.py
src/flet_router/components/: middleware_base.py
src/flet_router/types/: __init__.py
src/flet_routing/: __init__.py  router.py
src/flet_routing/builtin/middlewares/: logger.py
src/flet_routing/builtin/views/: not_found.py
src/flet_routing/components/: __init__.py  base_view.py  middleware.py
src/flet_routing/types/: types.py
